# amoeba-dsp

./: .gitignore  CMakeLists.txt  README.md  package-info.json
.github/workflows/: test.yml
help/: amoeba.outputs.brownian~.maxhelp  amoeba.outputs.constellation~.maxhelp  amoeba.outputs.flow~.maxhelp  amoeba.outputs.granular~.maxhelp  amoeba.outputs.growth~.maxhelp  amoeba.outputs.membrane~.maxhelp  amoeba.outputs.orbit~.maxhelp  amoeba.outputs.physarum~.maxhelp  amoeba.outputs.swarm~.maxhelp  amoeba.outputs.vortex~.maxhelp
source/include/: myseq_amoeba_dsp.hpp  myseq_amoeba_wrapper.hpp  myseq_preset_bank.hpp  myseq_preset_ui.hpp  myseq_tooltip_ui.hpp
source/projects/: amoeba.outputs.cmake
source/projects/amoeba.outputs.brownian~/: CMakeLists.txt  amoeba.outputs.brownian~.cpp
source/projects/amoeba.outputs.constellation~/: CMakeLists.txt  amoeba.outputs.constellation~.cpp
source/projects/amoeba.outputs.flow~/: CMakeLists.txt  amoeba.outputs.flow~.cpp
source/projects/amoeba.outputs.granular~/: CMakeLists.txt  amoeba.outputs.granular~.cpp
source/projects/amoeba.outputs.growth~/: CMakeLists.txt  amoeba.outputs.growth~.cpp
source/projects/amoeba.outputs.membrane~/: CMakeLists.txt  amoeba.outputs.membrane~.cpp
source/projects/amoeba.outputs.orbit~/: CMakeLists.txt  amoeba.outputs.orbit~.cpp
source/projects/amoeba.outputs.physarum~/: CMakeLists.txt  amoeba.outputs.physarum~.cpp
source/projects/amoeba.outputs.swarm~/: CMakeLists.txt  amoeba.outputs.swarm~.cpp
source/projects/amoeba.outputs.vortex~/: CMakeLists.txt  amoeba.outputs.vortex~.cpp
tests/: CMakeLists.txt  amoeba_dsp_test.cpp
